--- a/src/pages/Products/Products.css
+++ b/src/pages/Products/Products.css
@@ -30,6 +30,7 @@
 }
 .pro:hover {
     box-shadow: 20px 20px 30px rgba(0,0,0,0.02);
+    opacity: .8;
 }
 .pro img {
     width: 100%;
@@ -76,55 +77,6 @@
     bottom: 20px;
     right: 20px;
 }
-/* 
-.product {
-    display: flex;
-    width: 80%;
-    max-width: 1000px;
-    margin: 35px auto;
-}
-.img-field {
-    flex: 50%;
-}
-.main-img img{
-    width: 520px;
-    height: 520px;
-}
-.list-img img {
-    width: 102px;
-    height: 102px;
-    margin: auto 3px;
-}
 
-.detail-field {
-    margin-left: 35px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-.product-name, .price {
-    width: 100%;
-    text-align: left;
-    margin-bottom: 20px;
-}
-.price {
-    color: var(--mid-grey);
-}
+/* --------------------------------------------------------------- */
 
-#add-btn{
-    width: 90%;
-    height: 50px;
-    border: 2px solid black;
-    line-height: 2.5rem;
-    margin: 30px auto;
-    cursor: pointer;
-}
-#add-btn:hover {
-    background-color: var(--low-grey);
-}
-#subscription {
-    text-align: left;
-    margin: 30px auto;
-    font-size: large;
-    line-height: 1.8rem;
-} */
