--- a/src/pages/Product/Product.css
+++ b/src/pages/Product/Product.css
@@ -1,57 +1,3 @@
-/* .product {
-    display: flex;
-    width: 80%;
-    max-width: 1000px;
-    margin: 35px auto;
-}
-.img-field {
-    flex: 50%;
-}
-.main-img img{
-    width: 520px;
-    height: fit-content;
-    border: 2px solid var(--low-grey);
-}
-.list-img img {
-    width: 102px;
-    height: 102px;
-    margin: auto 3px;
-}
-
-.detail-field {
-    margin-left: 35px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-.product-name, .price {
-    width: 100%;
-    text-align: left;
-    margin-bottom: 20px;
-}
-.price {
-    color: var(--mid-grey);
-}
-
-#add-btn{
-    width: 90%;
-    height: 50px;
-    border: 2px solid black;
-    line-height: 2.5rem;
-    margin: 30px auto;
-    cursor: pointer;
-}
-#add-btn:hover {
-    background-color: var(--low-grey);
-}
-#subscription {
-    text-align: left;
-    margin: 30px auto;
-    font-size: large;
-    line-height: 1.8rem;
-} */
-
-/* ----------------------------------------------------------------------- */
 
 #prodetails {
     display: flex;
@@ -89,12 +35,12 @@
 }
 .small-img-group {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     flex-wrap: wrap;
 }
 .small-img-col {
     margin-right: 2px;
-    flex-basis: 22%;
+    flex-basis: calc((100% - 8px)/4);
 }
 .small-img-col img{
     min-width: 100%;
