--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -28,6 +28,22 @@
     display: flex;
     justify-content: space-between;
 }
+.cart-btn {
+    position: relative;
+}
+.cart-btn::after {
+    position: absolute;
+    content: "1";
+    width: 24px;
+    height: 24px;
+    right: -6px;
+    bottom: 23px;
+    background-color: rgba(97, 96, 96, 0.5);
+    border: 1px solid black;
+    border-radius: 50%;
+    line-height: 1.5rem;
+    font-family: 'Righteous', cursive;
+}
 #toggle-btn {
     display: none;
     width: 30px;
@@ -46,6 +62,7 @@
     transform: scale(1.5);
     opacity: .8;
 }
+
 .menu {
     margin: 35px auto;
 }
