--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -33,7 +33,7 @@
 }
 .cart-btn::after {
     position: absolute;
-    content: "1";
+    content: attr(data-content);
     width: 24px;
     height: 24px;
     right: -6px;
