--- a/src/App.css
+++ b/src/App.css
@@ -25,3 +25,16 @@ a {
     text-decoration: none;
     color: inherit;
 }
+.alert {
+    position: fixed;
+    width: 300px;
+    height: 80px;
+    top: 50%;
+    left: 50%;
+    margin-top: -40px; /* Negative half of height. */
+    margin-left: -150px; 
+    background-color: rgba(109,109,109,.8);
+    font-size: 1.5rem;
+    line-height: 2.5rem;
+    border-radius: 10px;
+}
