--- a/src/pages/Cart/Cart.css
+++ b/src/pages/Cart/Cart.css
@@ -5,13 +5,11 @@
     margin: 30px auto;
 }
 .order-item {
-    position: relative;
     margin: auto;
     width: 80%;
     max-width: 1000px;
-    padding: 20px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
     border: 1px solid var(--mid-grey);
 }
@@ -22,34 +20,26 @@
     border-top: none;
 }
 .delete-btn {
-    position: absolute;
-    background-color: var(--low-grey);
     width: 30px;
     height: 30px;
-    top: 0px;
-    right: 10px;
-    line-height: 2rem;
     cursor: pointer;
 }
-.delete-btn:hover {
-    background-color: black;
-    color: whitesmoke;
-}
 .order-item-img {
-    width: 100px;
+    width: 50px;
+    height: 50px;
+    overflow: hidden;
 }
 .order-item-img img {
     width: 100%;
-    height: fit-content;
 }
 .order-item-name {
     flex-basis: 40%;
+    text-align: start;
 }
 .order-item-size, .order-item-quantity, .order-item-amount{
-    height: 100px;
     line-height: 2.8rem;
-    margin: 15px;
     background-color: transparent;
+    margin: 15px;
 }
 #my-cart label, #my-cart h4 {
     background-color: transparent;
@@ -77,7 +67,7 @@
     font-family: 'Bree Serif', serif;
     margin: 50px;
 }
-#order-btn {
+.order-btn {
     width: 250px;
     height: 50px;
     border: 2px solid black;
@@ -85,7 +75,7 @@
     margin: auto;
     cursor: pointer;
 }
-#order-btn:hover {
+.order-btn:hover {
     background-color: black;
     color: whitesmoke;
 }
@@ -99,14 +89,17 @@
 @media screen and (max-width: 480px){
     .order-item {
         width: 90%;
+        padding-top: 10px;
         flex-wrap: wrap;
-        justify-content: center;
+        justify-content: space-evenly;
     }
     .order-item-img {
-        width: 80px;
+        width: 50px;
+        height: 50px;
+        overflow: hidden;
     }
     .order-item-name {
         font-size: 1rem;
-        flex-basis: 75%;
+        flex-basis: 51%;
     }
 }
