--- a/src/pages/Product/Product.css
+++ b/src/pages/Product/Product.css
@@ -35,15 +35,15 @@
 }
 .small-img-group {
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     flex-wrap: wrap;
 }
 .small-img-col {
     margin-right: 2px;
-    flex-basis: calc((100% - 8px)/4);
+    flex-basis: calc(100%/8);
 }
 .small-img-col img{
-    min-width: 100%;
+    width: 100%;
     height: auto;
     cursor: pointer;
 }
@@ -87,7 +87,7 @@
 }
 
 #prodetails .single-pro-details p {
-    line-height: 25px;
+    line-height: 2rem;
     text-align: start;
     font-size: large;
 }
@@ -102,7 +102,20 @@
 }
 /* Responsive */
 @media screen and (max-width: 1024px) {
-
+    #prodetails {
+        display: flex;
+        margin-top: 20px;
+        flex-wrap: wrap;
+    }
+    #prodetails .single-pro-img {
+        width: 80%;
+        margin: auto;
+    }
+        #prodetails .single-pro-details {
+        width: 80%;
+        padding-top: 30px;
+        margin: auto;
+    }
 }
 @media screen and (max-width: 768px) {
     #prodetails {
@@ -110,10 +123,10 @@
     }
     #prodetails .single-pro-img {
         width: 90%;
-        margin: auto 20px;
+        margin: auto;
     }
     .small-img-group {
-        flex-wrap: nowrap;
+        flex-wrap: wrap;
         overflow: hidden;
     }
     #prodetails .single-pro-details {
